# TPS-324-2023-2

./: .gitignore  CMakeLists.txt  README.md
include/: arbol_options.hpp  heladeria_options.hpp  lista_options.hpp  pila_options.hpp
lib/: CMakeLists.txt
lib/arbol/: CMakeLists.txt
lib/arbol/include/: arbol.hpp
lib/arbol/src/: arbol.cpp
lib/heladeria/: CMakeLists.txt
lib/heladeria/include/: heladeria.hpp
lib/heladeria/src/: heladeria.cpp
lib/listas/: CMakeLists.txt
lib/listas/include/: listas.hpp
lib/listas/src/: listas.cpp
lib/pilas/: CMakeLists.txt
lib/pilas/include/: pilas.hpp
lib/pilas/src/: pilas.cpp
lib/utils/: CMakeLists.txt
lib/utils/include/: menu.hpp
lib/utils/src/: menu.cpp
src/: arbol_options.cpp  heladeria_options.cpp  lista_options.cpp  main.cpp  pila_options.cpp
